# portrait-tf2

./: README.md
android_example/: .gitignore  build.gradle  settings.gradle
android_example/app/: build.gradle
android_example/app/src/androidTest/java/: AndroidManifest.xml
android_example/app/src/main/: AndroidManifest.xml
android_example/app/src/main/java/com/vcall/: CameraActivity.java  CameraConnectionFragment.java  ClassifierActivity.java  LegacyCameraConnectionFragment.java  MenuListFragment.java  SettingsActivity.java
android_example/app/src/main/java/com/vcall/custom_view/: AutoFitTextureView.java  BlurryView.java  MainDataViewModel.java  (+1 more)
android_example/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  drawer_menu.xml  fragment_menu.xml  texture_view_camera.xml  view_feed_toolbar.xml  view_global_menu_header.xml
android_example/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
android_example/app/src/main/res/values-ko-rKR/: strings.xml
android_example/gradle/wrapper/: gradle-wrapper.properties
android_example/portrait/: build.gradle
android_example/portrait/src/main/: AndroidManifest.xml
android_example/portrait/src/main/assets/: mobilenetv2_0.75_128_portrait_quant_aware.tflite
android_example/portrait/src/main/cpp/: CMakeLists.txt  argb2yuv.cpp  blur.cpp  filter.cpp  mask_processing.cpp  yuv420sp2argb.cpp
android_example/portrait/src/main/java/com/portrait/: BlurModule.java  ImageUtils.java  ModuleWrapper.java  PortraitModule.java
train/: input_pipeline.py  main.py  mobilenetv3.py  model_zoo.py  utils.py
